# test_conan_cpp_project

./: Dockerfile
src/: CMakeLists.txt  DummyModule-Interface.cpp  DummyModule.cpp  main.cpp
